--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@
   --background: rgba(255, 255, 255, 0.922);
   --shadowElements: 3px, 4px solid rgba(174, 174, 174, 0.899);
 }
+
+.checkBox {
+  border: 1.2px solid black;
+}
