--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 
 
-
-h4 {
-
-  font-size: 1.125rem;
-
-}
 
 :root{
 
@@ -20,3 +15,20 @@ body {
   background-color: var(--bodyBackground);
 
 }
+
+h4 {
+
+  font-family: "Poppins", sans-serif;
+  font-size: 1.125rem;
+
+}
+
+ label, p {
+
+  display: flex;
+  gap: 0.9rem;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.825rem;
+
+
+ }
