--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ h4 {
 
   display: flex;
   gap: 0.9rem;
+  padding-bottom: 0.4rem;
   font-family: "Poppins", sans-serif;
   font-size: 0.825rem;
 
