added h5 tag to price range

--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -19,8 +19,18 @@
 
 .sizeBtnSection {
 
-    width: 100%;
+
     margin: 0.3rem;
+
+   
+
+}
+
+.sizeBtnSection  h4 {
+
+
+    display:  block;
+    padding-bottom: 1rem;
 
    
 
