--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+*{
+
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 
 
@@ -32,4 +38,9 @@ h4 {
   font-size: 0.825rem;
 
 
+ }
+
+ .mainContentWrapper {
+
+  padding: 0.8rem;
  }
