--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -36,6 +36,17 @@
 
 }
 
+.wrapper  h5 {
+
+
+    display:  block;
+    padding-bottom: 1rem;
+    font-family:"Poppins", sans-serif;
+
+   
+
+}
+
 .sizeBtnSection span {
 
   
