--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -2,13 +2,10 @@
 .Sidebar-Container {
   display: flex;
   flex-direction: column;
-  width: 33.22%;
-  width: 220px;
+  max-width: 33.33%;
   padding: 2.2rem;
-
   border-radius: 0.3rem;
   background-color: var(--contentContainerColor);
-  
 }
 
 
