--- a/src/styles/allproducts.css
+++ b/src/styles/allproducts.css
@@ -1,5 +1,6 @@
-.allproducts{
-    display: flex;
-    flex-direction: row;
-    
+.allproducts {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  object-fit: scale-down;
 }
