--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,4 +1,11 @@
-.product{
-    width: 300px;
-    border: 1px solid black;
+.product {
+  width: 250px;
+  border: 1px solid black;
+  margin: 5px;
+  box-sizing: border-box;
+}
+.product img {
+  height: 200px;
+  width: 200px;
+  object-fit: scale-down;
 }
