MainContent.js and maincontent.css

--- a/src/App.css
+++ b/src/App.css
@@ -42,5 +42,9 @@ h4 {
 
  .mainContentWrapper {
 
+  display: flex;
+  flex-direction:  row;
+  justify-content: space-evenly;
   padding: 0.8rem;
+  gap: 1rem;
  }
