--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -6,3 +6,12 @@
     background-color: #7743DB;
 
 }
+
+.logo {
+
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size:  1.2rem;
+    padding: 0.5rem;
+    color: #ffff;
+}
