--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 .Sidebar-Container {
   display: flex;
   flex-direction: column;
-  max-width: 33.33%;
+  width: 33%;
   padding: 2.2rem;
   border-radius: 0.3rem;
   background-color: var(--contentContainerColor);
