--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 33%;
+  width: 350px;
   padding: 2.2rem;
   border-radius: 0.3rem;
   background-color: var(--contentContainerColor);
