--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,15 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 .Sidebar-Container {
   display: flex;
   flex-direction: column;
-  width: 33%;
+  /* width: 33%; */
   width: 350px;
   padding: 2.2rem;
-  border-radius: 0.3rem;
+  border-radius: 0.8rem;
   background-color: var(--contentContainerColor);
+  margin: 0;
 }
-
-
-
-
