--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-*{
-
+*,
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-
-
-:root{
-
-  --bodyBackground: #F3F6F9;
-  --contentContainerColor: #FFFF;
-  
+.App {
+  display: flex;
 }
-
+:root {
+  --bodyBackground: #f3f6f9;
+  --contentContainerColor: #ffff;
+}
 body {
-
   background-color: var(--bodyBackground);
-
 }
 
 h4 {
-
   font-family: "Poppins", sans-serif;
   font-size: 1.125rem;
-
+  padding-bottom: 1.25rem;
 }
 
- label, p {
-
+label,
+p {
   display: flex;
   gap: 0.9rem;
   padding-bottom: 0.4rem;
   font-family: "Poppins", sans-serif;
   font-size: 0.825rem;
+}
 
-
- }
-
- .mainContentWrapper {
-
+.mainContentWrapper {
   display: flex;
-  flex-direction:  row;
-  justify-content: space-evenly;
+
+  justify-content: center;
   padding: 0.8rem;
   gap: 1rem;
- }
+  width: 90%;
+  margin: 0 auto;
+}
