--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,17 +1,22 @@
 .navBar {
-
-    display: flex;
-    min-width: 100%;
-    padding: 1.55rem;
-    background-color: #7743DB;
-
+  display: flex;
+  width: 100%;
+  height: 75px;
+  background-color: #7743db;
 }
 
-.logo {
-
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-size:  1.2rem;
-    padding: 0.5rem;
-    color: #ffff;
+h1 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 550;
+  font-size: 1.2rem;
+  /* background-color: #fff; */
+  margin-left: 7rem;
+  margin-top: 1rem;
+  margin-bottom: 1.2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  color: #7743db;
+  background-color: white;
+  border-radius: 5px;
 }
