--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,11 +1,29 @@
 .product {
-  width: 250px;
-  border: 1px solid black;
-  margin: 5px;
   box-sizing: border-box;
+  background-color: #f3f6f9;
+  border-radius: 12px;
+
+  padding: 10px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  /*  display: flex;
+  width: 25%;
+  width: 250px;
+  height: 30vh;
+  padding: 4rem;
+  background-color: rgb(222, 216, 209); */
 }
 .product img {
-  height: 200px;
-  width: 200px;
-  object-fit: scale-down;
+  height: 150px;
+  width: 150px;
+  object-fit: contain;
+}
+@media screen and(max-width:992px) {
+  product {
+    width: 50%;
+  }
 }
